Resolves: tdf#96580 Sequence::get doesn't return the start of the data

it returns the start of the underlying uno_Sequence

commit 78c83032b266fbb6fc20ddca86df80affaff7c24
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Wed Sep 30 09:40:16 2015 +0100

    maSvgDataArray only populates a uno::Sequence, so use that instead

    Change-Id: I335d5ee70e95e1a3b204d34f6df4cb62f3fb3cad

Change-Id: I8d2c07fec039e58d3644e4ab5eb074ee215f075e